# dicom-viewer

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp
src/core/: MedicalImage.cpp  MedicalImage.h
src/ui/forms/: mainwindow.ui
src/ui/resources/: resources.qrc
src/ui/windows/: mainwindow.cpp  mainwindow.h  menuutils.cpp  menuutils.h  utils.cpp  utils.h
